update: 프로필 간단 소개-강군호

--- a/GCHome.html
+++ b/GCHome.html
@@ -77,10 +77,10 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="https://firebasestorage.googleapis.com/v0/b/gico-5304c.appspot.com/o/KakaoTalk_20231129_202909549.jpg?alt=media&token=87632cff-866e-4fa4-99e0-03c3fa36f7b3" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a short card.</p>
+                        <h5 class="card-title">강군호</h5>
+                        <p class="card-text">팀 지코 파이팅!!</p>
                     </div>
                     <button type="button" class="btn btn-dark">자세히 보러가기</button>
                 </div>
