--- a/GCHome.html
+++ b/GCHome.html
@@ -18,6 +18,11 @@
     filter: invert(100%) sepia(19%) saturate(0%) hue-rotate(204deg) brightness(104%) contrast(106%);
   }
 
+        .btnfade:hover {
+            background: #30363d;
+            border-radius: 15px;
+        }
+
         .GCheader {
             background-color: white;
         }
@@ -63,8 +68,8 @@
                 </a>
         
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                  <li><a href="#" class="nav-link px-2 text-white">Genius Coding</a></li>
-                  <li><a href="#" class="nav-link px-2 text-secondary">방명록</a></li>
+                  <li><a href="GCHome.html" class="btnfade nav-link px-2 text-white" >Genius Coding</a></li>
+                  <li><a href="GCInfi.html" class="btnfade nav-link px-2 text-secondary" >방명록</a></li>
                 </ul>
               </div>
             </div>
