--- a/GCHome.html
+++ b/GCHome.html
@@ -121,9 +121,9 @@
                 <div class="card h-100">
                     <img src="..." class="card-img-top" alt="..."style="height: 270px;">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">허지행</h5>
                         <hr width="100%" color="black" size="4">
-                        <p class="card-text">This is a short card.</p>
+                        <p class="card-text">지코 아자아자!</p>
                     </div>
                     <button type="button" class="btn btn-dark">자세히 보러가기</button>
                 </div>
