--- a/GCHome.html
+++ b/GCHome.html
@@ -108,11 +108,11 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="..."style="height: 270px;">
+                    <img src="https://img1.daumcdn.net/thumb/C360x360/?scode=mtistory2&fname=https%3A%2F%2Ftistory1.daumcdn.net%2Ftistory%2F6479651%2Fattach%2Fb7a98818837e47b9a221519d0404f8fb" class="card-img-top" alt="..."style="height: 270px;">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">조동희</h5>
                         <hr width="100%" color="black" size="4">
-                        <p class="card-text">This is a short card.</p>
+                        <p class="card-text">잘 부탁드립니다! 열심히 해봐요!</p>
                     </div>
                     <button type="button" class="btn btn-dark">자세히 보러가기</button>
                 </div>
