--- a/GCHome.html
+++ b/GCHome.html
@@ -119,9 +119,9 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="..."style="height: 270px;">
+                   <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzA3MDNfODIg%2FMDAxNjg4MzE1MDU1ODcz.adOzGp4_z_EIY4LbkfY0cNFk1DYVW16gJBjhIsvozRog.wVnbwqIvrOPqBn80zWpnT6nrnYvF4mzZHmWygl-UkGkg.PNG.rladkfma4198%2Fzepeto%25A3%25DFphoto%25A3%25DF1688310597784.png&type=a340" class="card-img-top" alt="..."style="height: 270px;">
                     <div class="card-body">
-                        <h5 class="card-title">허지행</h5>
+                        <h5 class="card-title">허지행</h5>                    
                         <hr width="100%" color="black" size="4">
                         <p class="card-text">지코 아자아자!</p>
                     </div>
