온클릭 명령어 수정

--- a/GCHome.html
+++ b/GCHome.html
@@ -52,7 +52,7 @@
         <header class="d-flex justify-content-center py-3">
             <ul class="nav nav-pills">
                 <button type="button" class="btn btn-dark">Home</button>
-                <button type="button" class="btn btn-outline-dark">방명록</button>
+                <button type="button" class="btn btn-outline-dark" onclick="document.location.href='배포시킨 방명록 주소'">방명록</button>
             </ul>
         </header>
     </div>
