--- a/GCInfi.html
+++ b/GCInfi.html
@@ -101,7 +101,7 @@
     <div class="start">
         <header class="d-flex justify-content-center py-3">
             <ul class="nav nav-pills">
-                <button type="button" class="btn btn-outline-dark">Home</button>
+                <button type="button" class="btn btn-outline-dark" onclick="document.location.href='../mini project/GChome.html'">Home</button>
                 <button type="button" class="btn btn-dark">방명록</button>
             </ul>
         </header>
@@ -136,9 +136,9 @@
             </thead>
             <tbody>
                 <tr>
-                    <th scope="col" style="width: 180px; text-align: center;">날짜</th>
+                    <th scope="col" style="width: 180px; text-align: center;">2023-11-30</th>
                     <td style="width: 220px; text-align: center;">이시원</td>
-                    <td style="text-align: center;">내용입니다.</td>
+                    <td style="text-align: center;">팀원분들 모두 수고 많으셨습니다!</td>
                 </tr>
                 <tr>
                     <th scope="col" style="width: 180px; text-align: center;">날짜</th>
