--- a/Leesw.html
+++ b/Leesw.html
@@ -162,7 +162,7 @@
         <header class="d-flex justify-content-center py-3">
             <ul class="nav nav-pills">
                 <button type="button" class="btn btn-outline-primary" onclick="document.location.href='../mini project/GChome.html'">Home</button>
-                <button type="button" class="btn btn-outline-primary">방명록</button>
+                <button type="button" class="btn btn-outline-primary" onclick="document.location.href='../mini project/GCInfi.html'">방명록</button>
             </ul>
         </header>
     </div>
