--- a/Leesw.html
+++ b/Leesw.html
@@ -15,8 +15,13 @@
             background-color: rgb(150, 205, 253);
         }
 
+        #cat {
+            filter: opacity(.5) drop-shadow(0 0 0 white);
+            filter: invert(100%) sepia(19%) saturate(0%) hue-rotate(204deg) brightness(104%) contrast(106%);
+        }
+
         .GCheader {
-            background-color: white;
+            background-color: rgb(68, 68, 255);
         }
 
         .main {
@@ -144,6 +149,8 @@
             margin: 200px auto 100px auto;
         }
 
+
+
     </style>
     <script>
         $(document).ready(function () {
@@ -159,11 +166,19 @@
 
 <body>
     <div class="GCheader">
-        <header class="d-flex justify-content-center py-3">
-            <ul class="nav nav-pills">
-                <button type="button" class="btn btn-outline-primary" onclick="document.location.href='../mini project/GChome.html'">Home</button>
-                <button type="button" class="btn btn-outline-primary" onclick="document.location.href='../mini project/GCInfi.html'">방명록</button>
-            </ul>
+        <header class="p-3">
+            <div class="container">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                    <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                        <img id="cat" src="catlogo.png" style="width: 60px; height: 60px;" />
+                    </a>
+
+                    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                        <li><a href="GCHome.html" class="btnfade nav-link px-2 text-white">Genius Coding</a></li>
+                        <li><a href="GCInfi.html" class="btnfade nav-link px-2 text-white">방명록</a></li>
+                    </ul>
+                </div>
+            </div>
         </header>
     </div>
     <div class="hello">
