--- a/GCInfi.html
+++ b/GCInfi.html
@@ -117,6 +117,19 @@
     tr {
       display: block;
     }
+    .dt {
+      width: 300px;
+    }
+    .nm {
+      width: 200px
+    }
+    .cm {
+      width: 500px
+    }
+
+    th-1 {
+      width: 200px;
+    }
 
     th {
       text-align: center;
@@ -283,9 +296,9 @@
       <table>
         <thead>
           <tr>
-            <th>Date</th>
-            <th>Name</th>
-            <th>Comment</th>
+            <th width="200px" id="dt">Date</th>
+            <th width="200px" id="nm">Name</th>
+            <th width="800px" id="cm">Comment</th>
           </tr>
         </thead>
         <tbody id="tbody">
