상세페이지

--- a/GCHome.html
+++ b/GCHome.html
@@ -92,7 +92,7 @@
                         <p class="card-text">팀명 지코의 팀장을 맡고 있습니다. 잘 부탁드립니다.</p>
                     </div>
                     <button type="button" class="btn btn-dark"
-                        onclick="document.location.href='../mini project/Leesw.html'">
+                        onclick="location.href='Leesw.html'">
                         자세히 보러가기</button>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                         <hr width="100%" color="black" size="4">
                         <p class="card-text">팀 지코 파이팅!!</p>
                     </div>
-                    <button type="button" class="btn btn-dark">자세히 보러가기</button>
+                    <button type="button"  onclick="location.href='9nh5.html'"class="btn btn-dark">자세히 보러가기</button>
                 </div>
             </div>
             <div class="col">
@@ -117,7 +117,7 @@
                         <hr width="100%" color="black" size="4">
                         <p class="card-text">잘 부탁드립니다! 열심히 해봐요!</p>
                     </div>
-                    <button type="button" class="btn btn-dark">자세히 보러가기</button>
+                    <button type="button" onclick="location.href='Donghee.html'" class="btn btn-dark">자세히 보러가기</button>
                 </div>
             </div>
             <div class="col">
@@ -129,7 +129,7 @@
                         <hr width="100%" color="black" size="4">
                         <p class="card-text">지코 아자아자!</p>
                     </div>
-                    <button type="button" class="btn btn-dark">자세히 보러가기</button>
+                    <button type="button" onclick="location.href='plMBTI.html'" class="btn btn-dark">자세히 보러가기</button>
                 </div>
             </div>
             <div class="col">
@@ -140,7 +140,7 @@
                         <hr width="100%" color="black" size="4">
                         <p class="card-text">코멘트 적는곳</p>
                     </div>
-                    <button type="button" class="btn btn-dark">자세히 보러가기</button>
+                    <button type="button" onclick="location.href='1130.html'" class="btn btn-dark">자세히 보러가기</button>
                 </div>
             </div>
         </div>
