--- a/donghee.html
+++ b/donghee.html
@@ -148,11 +148,20 @@
 
 <body>
     <div class="GCheader">
-        <header class="d-flex justify-content-center py-3">
-            <ul class="nav nav-pills">
-                <button type="button" class="btn btn-outline-primary" onclick="document.location.href='../mini project/GChome.html'">Home</button>
-                <button type="button" class="btn btn-outline-primary">방명록</button>
-            </ul>
+
+        <header class="p-3 bg-white text-black">
+            <div class="container">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                    <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                        <img id="cat" src="catlogo.png" style="width: 60px; height: 60px;" />
+                    </a>
+
+                    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                        <li><a href="GCHome.html" class="btnfade nav-link px-2 text-dark">Genius Coding</a></li>
+                        <li><a href="GCInfi.html" class="btnfade nav-link px-2 text-dark">방명록</a></li>
+                    </ul>
+                </div>
+            </div>
         </header>
     </div>
     <div class="hello">
