개인페이지 수정

--- a/Leesw.html
+++ b/Leesw.html
@@ -12,7 +12,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Dongle&family=Nanum+Pen+Script&family=Noto+Sans+KR:wght@300&family=Sunflower:wght@700&display=swap');
 
         body {
-            background-color: rgb(150, 205, 253);
+            background-color: #2D9596;
         }
 
         #cat {
@@ -21,7 +21,7 @@
         }
 
         .GCheader {
-            background-color: rgb(68, 68, 255);
+            background-color: #265073;
         }
 
         .main {
@@ -54,7 +54,7 @@
         }
 
         .hello {
-            color: rgb(40, 40, 165);
+            color: #9AD0C2;
             width: 1400px;
 
             font-family: 'Sunflower', sans-serif;
@@ -68,7 +68,7 @@
         }
 
         .mytmi {
-            color: rgb(40, 40, 165);
+            color: #9AD0C2;
             font-family: 'Sunflower', sans-serif;
             width: 1400px;
             height: 400px;
@@ -129,13 +129,13 @@
         }
 
         .Question {
-            Color: rgb(68, 68, 255);
+            Color: #9AD0C2;
             font-size: 35px;
             line-height: 50px;
         }
 
         .Answer {
-            color: white;
+            color: #ECF4D6;
             font-size: 20px;
             line-height: 10px;
         }
@@ -212,17 +212,17 @@
             <div class="catname1" style="font-size:30px">
                 <div class="mycat1"></div>
                 <p>소피</p>
-                <p>3냥이중 첫째이자 서열1위 애교쟁이소피입니다.</p>
+                <p style="color: #ECF4D6;">3냥이중 첫째이자 서열1위 애교쟁이소피입니다.</p>
             </div>
             <div class="catname1" style="font-size:30px">
                 <div class="mycat2"> </div>
                 <p>마리</p>
-                <p>3냥이중 둘째이자 서열3위 엄마바라기마리입니다.</p>
+                <p style="color: #ECF4D6;">3냥이중 둘째이자 서열3위 엄마바라기마리입니다.</p>
             </div>
             <div class="catname1" style="font-size:30px">
                 <div class="mycat3"></div>
                 <p>단이</p>
-                <p>저희 3냥이중 막내이자 서열2위 개구쟁이단이입니다.</p>
+                <p style="color: #ECF4D6;">저희 3냥이중 막내이자 서열2위 개구쟁이단이입니다.</p>
             </div>
         </div>
     </div>
