개인페이지 수정

--- a/Leesw.html
+++ b/Leesw.html
@@ -135,7 +135,7 @@
         }
 
         .Answer {
-            color: #ECF4D6;
+            color: #f9fcf0;
             font-size: 20px;
             line-height: 10px;
         }
@@ -212,17 +212,17 @@
             <div class="catname1" style="font-size:30px">
                 <div class="mycat1"></div>
                 <p>소피</p>
-                <p style="color: #ECF4D6;">3냥이중 첫째이자 서열1위 애교쟁이소피입니다.</p>
+                <p style="color: #f9fcf0;">3냥이중 첫째이자 서열1위 애교쟁이소피입니다.</p>
             </div>
             <div class="catname1" style="font-size:30px">
                 <div class="mycat2"> </div>
                 <p>마리</p>
-                <p style="color: #ECF4D6;">3냥이중 둘째이자 서열3위 엄마바라기마리입니다.</p>
+                <p style="color: #f9fcf0;">3냥이중 둘째이자 서열3위 엄마바라기마리입니다.</p>
             </div>
             <div class="catname1" style="font-size:30px">
                 <div class="mycat3"></div>
                 <p>단이</p>
-                <p style="color: #ECF4D6;">저희 3냥이중 막내이자 서열2위 개구쟁이단이입니다.</p>
+                <p style="color: #f9fcf0;">저희 3냥이중 막내이자 서열2위 개구쟁이단이입니다.</p>
             </div>
         </div>
     </div>
