--- a/Leesw.html
+++ b/Leesw.html
@@ -48,7 +48,7 @@
             margin-top: 100px;
             border-radius: 20px;
 
-            background-image: url(https://i.imgur.com/rcFPphB.jpg);
+            background-image: url(https://i.imgur.com/25A8881.jpg);
             background-position: center;
             background-size: cover;
         }
