사진크기 수정본입니다

--- a/1130.html
+++ b/1130.html
@@ -23,13 +23,13 @@ font-family: 'Nanum Pen Script', cursive;
             align-items: center;
             justify-content: center;
             
-            background-image: url('https://th.bing.com/th/id/OIP.jiIUs6viUY3dPeOI6gjN1QAAAA?rs=1&amp;pid=ImgDetMain" alt="잔디 축구 경기장 - Pixabay의 무료 이미지" class=" nofocus" tabindex="0" aria-label="잔디 축구 경기장 - Pixabay의 무료 이미지" role="button" data-bm="27');
+            background-image: url('https://img.freepik.com/premium-photo/word-blog-from-blue-letters-on-striped-background_392895-377793.jpg');
             background-position: center;
             background-size: cover;
         }
         .mytitle > button{
-            width: 150px;
-            height: 50px;
+            width: 200px;
+            height: 100px;
             background-color: transparent;
             color: black;
             border: 1px solid black;
@@ -37,7 +37,9 @@ font-family: 'Nanum Pen Script', cursive;
             margin-top: 15px;
         }
         .mycards{
-
+          object-fit: cover;
+width: 100%;
+height: 250px;
         }
     </style>
     </head>
@@ -61,12 +63,12 @@ font-family: 'Nanum Pen Script', cursive;
 </div>
 <div class="form-floating mb-3">
   <input type="email" class="form-control" id="floatingInput" placeholder="아래의 간단한 TMI를 준비해봤습니다">
-  <label for="floatingInput">아래의 간단한 TMI를 준비해봤습니다/label>
+  <label for="floatingInput">아래의 간단한 TMI를 준비해봤습니다</label>
 </div>
     <div class="mycards">
 <div class="row row-cols-1 row-cols-md-4 g-4">
   <div class="col">
-    <div class="card h-100">
+    <div class="card h-50">
       <img src="https://th.bing.com/th/id/OIP.2R3gXnUOyMhpMVzQ8b1vcgHaHa?rs=1&amp;pid=ImgDetMain" alt="분데스리가 - ArtemArizana" class=" nofocus" tabindex="0" aria-label="분데스리가 - ArtemArizana" role="button" data-bm="4">
       <div class="card-body">
         <h5 class="card-title">가장 좋아하는 축구팀</h5>
@@ -78,7 +80,7 @@ font-family: 'Nanum Pen Script', cursive;
     </div>
   </div>
   <div class="col">
-    <div class="card h-100">
+    <div class="card h-50">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cc/Thomas_Müller_2022_(cropped).jpg/440px-Thomas_Müller_2022_(cropped).jpg" alt="토마스 뮐러 - 위키백과, 우리 모두의 백과사전" class=" nofocus" tabindex="0" aria-label="토마스 뮐러 - 위키백과, 우리 모두의 백과사전" role="button">
       <div class="card-body">
         <h5 class="card-title">가장 좋아하는 축구선수</h5>
@@ -90,7 +92,7 @@ font-family: 'Nanum Pen Script', cursive;
     </div>
   </div>
   <div class="col">
-    <div class="card h-100">
+    <div class="card h-50">
       <img src="https://i.pinimg.com/originals/ad/c1/ad/adc1ad20f46070541cd63a78e33ed416.jpg">
       <div class="card-body">
         <h5 class="card-title">나의 MBTI</h5>
@@ -102,8 +104,8 @@ font-family: 'Nanum Pen Script', cursive;
     </div>
   </div>
   <div class="col">
-    <div class="card h-100">
-      <img src="https://img1.daumcdn.net/thumb/R800x0/?scode=mtistory2&amp;fname=https:%2F%2Fblog.kakaocdn.net%2Fdn%2FvkQUE%2FbtqwAmq4AD4%2F0i9MoDFZ3manZfEzUOGmd0%2Fimg.jpg">
+    <div class="card h-50">
+      <img src="https://i.ibb.co/drvB2qF/image.jpg" alt="image"></a>"
       <div class="card-body">
         <h5 class="card-title">저의 고향은 인천광역시입니다.</h5>
         <p class="card-text"></p>
