--- a/GCHome.html
+++ b/GCHome.html
@@ -59,12 +59,11 @@
 
 <body>
     <div class="GCheader">
-
         <header class="p-3 bg-dark text-white">
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                    <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                        <img id="cat" src="catlogo.png" style="width: 60px; height: 60px;" />
+                    <a href="GCHome.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                        <img id="cat"  src="catlogo.png" style="width: 60px; height: 60px;" />
                     </a>
 
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
