--- a/Leesw.html
+++ b/Leesw.html
@@ -169,7 +169,7 @@
         <header class="p-3">
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                    <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                    <a href="GCHome.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                         <img id="cat" src="catlogo.png" style="width: 60px; height: 60px;" />
                     </a>
 
