--- a/plMBTI.html
+++ b/plMBTI.html
@@ -197,7 +197,7 @@
                   <h3 class="card-title">7.나와의 약속:완주를 목표로 아자!</h3>
                   <p class="card-text">저의 목표는 우선 완주하는 것입니다"
                                        예전에도 관련 수업을 들은 적이 있는데 피치못할 사정으로 인해
-                                       중간에 그만두게 되어서 너무도 아쉬웠습니다">
+                                       중간에 그만두게 되어서 너무도 아쉬웠습니다.
                                        이번만큼은 최선을 다해 완주하도로 하겠습니다.</p>
                 </div>
               </div>
