현득님 사진 수정

--- a/GCHome.html
+++ b/GCHome.html
@@ -133,11 +133,11 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="이미지 남겨주세요~" class="card-img-top" alt="..." style="height: 270px;">
+                    <img src="https://i.ibb.co/drvB2qF/image.jpg" class="card-img-top" alt="..." style="height: 270px;">
                     <div class="card-body">
                         <h5 class="card-title">김현득</h5>
                         <hr width="100%" color="black" size="4">
-                        <p class="card-text">코멘트 적는곳</p>
+                        <p class="card-text">앞으로 교육 받으면서 잘 부탁드립니다</p>
                     </div>
                     <button type="button" onclick="location.href='1130.html'" class="btn btn-dark">자세히 보러가기</button>
                 </div>
